<resources>
    <!--Strings de produção:-->
    <string name="str_nome_app">Invi$ta já!</string>
    <string name="str_opcao_sim">Sim</string>
    <string name="str_opcao_nao">Não</string>
    <string name="str_opcao_ok">Ok!</string>
    <string name="str_frg_introducao_titulo">QUERO FICAR RICO!!</string>
    <string name="str_frg_introducao_corpo">O Invista já vai te ajudar a melhorar de vida</string>
    <string name="str_frg_conteudo_titulo">APRENDA A INVESTIR</string>
    <string name="str_frg_conteudo_titulo1">Qual caminho a seguir?</string>
    <string name="str_frg_conteudo_titulo2">O que devo estudar?</string>
    <string name="str_frg_conteudo_titulo3">Aonde aplicar?</string>
    <string name="str_frg_conteudo_titulo4">Colhendo os frutos...</string>
    <string name="str_frg_conteudo_titulo5">Guardando o lucro!</string>
    <string name="str_frg_conteudo_titulo6">Investir é o caminho!</string>
    <string name="str_frg_conteudo_logar">Vamos começar?</string>
    <string name="str_frg_conteudo_tracar_perfil">Traçar meu perfil</string>
    <string name="str_atencao">Atenção!</string>
    <string name="str_frg_sobre_titulo">DE ONDE VIEMOS</string>
    <string name="str_frg_informacoes_localizacao">LOCALIZAÇÃO</string>
    <string name="str_frg_informacoes_endereco">Serra, Brasil</string>
    <string name="str_frg_informacoes_redes_sociais">SIGA-NOS</string>
    <string name="str_frg_informacoes_desenvolvedor">DESENVOLVIDO POR</string>
    <string name="str_frg_informacoes_equipe">Grupo BREW</string>
    <string name="str_frg_informacoes_copyright">Copyright © Invista Já! 2016</string>
    <string name="str_acty_login_instrucao">POR FAVOR, LOGUE-SE</string>
    <string name="str_acty_login_email">Email</string>
    <string name="str_acty_login_senha">Senha</string>
    <string name="str_acty_login_btn_login">Fazer Login</string>
    <string name="str_acty_login_questao">NÃO POSSUI CADASTRO?</string>
    <string name="str_acty_login_criar_conta">CRIE UMA CONTA</string>
    <string name="str_frg_sobre_corpo_paragrafo1">Somos uma equipe de estudantes e
        desenvolvemos esse projeto para atender a
        necessidade de uma parte da população com
        pouco acesso a informações sobre finanças.</string>
    <string name="str_frg_sobre_corpo_paragrafo2">Estamos buscando levar a sustentabilidade
        social a um sistema que não favorece a todos,
        e tentando gerar informação confiável e que
        gere conhecimento.</string>

    <!--Strings de teste:-->
    <string name="str_teste">Função em construção!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
